[package]
name = "hacksynth"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.4.2", features = ["image"] }
iced_audio = "0.8"
fundsp = { git = "https://github.com/SamiPerttu/fundsp" }
cpal = "0.14.0"
anyhow = "1.0.66"
midir = "0.8.0"
log = "0.4.17"
env_logger = "0.9.1"
crossbeam-queue = "0.3.6"
midi-msg = "0.4.0"
